builder/src/styles/components.css
.btn {
  /* background: #FFFFFF; */
  /* Solid Colours/Brand/Primary/Primary-400 */

  /* Black Shadows/Black E1 */

  /* box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.08); */
  /* border-radius: 3px; */
  background: #ffffff;
  /* Solid Colours/Brand/Primary/Primary-400 */

  border: 1px solid #a673ef;
  /* Black Shadows/Black E1 */

  color: #8247e5;
  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.08);
  /* width: 200px; */
}

.btn:hover {
  background: #f9f8ff;
  /* Solid Colours/Brand/Primary/Primary-400 */

  border: 1px solid #a673ef;
  /* Black Shadows/Black E1 */
  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.08);
  color: #8247e5;
}
.btn:active {
  background: #ffffff;
  /* Solid Colours/Brand/Primary/Primary-400 */

  border: 1px solid #a673ef;
  /* State/Primary Focus */

  box-shadow: 0px 2px 2px -1px rgba(0, 0, 0, 0.12), 0px 0px 0px 3px #dcd4ff;
}
.input {
  /* background: #FFFFFF; */
  /* Solid Colours/Brand/Gray/Gray-400 */

  border-color: #e2e4e8;
  /* border-radius: 3px; */
}
.input:focus-visible {
  border: 1px solid #8247e5 !important;
  /* State/Primary Focus */
  outline: none;
  box-shadow: 0px 2px 2px -1px rgba(0, 0, 0, 0.12), 0px 0px 0px 1px #dcd4ff;
}

.color-span {
  width: 1.5rem;
  height: 1.5rem;
  margin-left: 2rem;
}

.container-drag {
  position: relative;
}

#drag {
  border: 1.2px dotted rgb(214, 204, 204);
  font-size: 24px;
  border-radius: 0 0 4px 4px;
}

.container-drag #drag {
  visibility: hidden;
  position: absolute;
  z-index: 1;
  right: 0%;
  opacity: 0;
  transition: opacity 0.2s;
  background: #8247e5;
  color: #f9f8ff;
}

.container-drag:hover #drag {
  visibility: visible;
  opacity: 1;
}

